--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,6 @@
     <groupId>cyou.wssy001</groupId>
     <artifactId>lava-banish</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lava-banish</name>
-    <description>Demo project for Spring Boot</description>
 
     <properties>
         <spring-boot.repackage.skip>true</spring-boot.repackage.skip>
@@ -26,13 +24,12 @@
             <groupId>moe.ofs</groupId>
             <artifactId>backend-core</artifactId>
             <version>0.0.1-SNAPSHOT</version>
-            <classifier>addon-dependency</classifier>
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-configuration-processor</artifactId>
-            <optional>true</optional>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-http</artifactId>
+            <version>5.5.1</version>
         </dependency>
 
     </dependencies>
@@ -49,60 +46,60 @@
                 <version>3.8.1</version>
             </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>3.1.0</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>src/main/resources/static</directory>
-                        </fileset>
-                        <fileset>
-                            <directory>${basedir}/web/dist</directory>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
+            <!--            <plugin>-->
+            <!--                <groupId>org.apache.maven.plugins</groupId>-->
+            <!--                <artifactId>maven-clean-plugin</artifactId>-->
+            <!--                <version>3.1.0</version>-->
+            <!--                <configuration>-->
+            <!--                    <filesets>-->
+            <!--                        <fileset>-->
+            <!--                            <directory>src/main/resources/static</directory>-->
+            <!--                        </fileset>-->
+            <!--                        <fileset>-->
+            <!--                            <directory>${basedir}/web/dist</directory>-->
+            <!--                        </fileset>-->
+            <!--                    </filesets>-->
+            <!--                </configuration>-->
+            <!--            </plugin>-->
 
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.0.0</version>
-                <executions>
-                    <execution>
-                        <id>exec-npm-install</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>npm</executable>
-                            <arguments>
-                                <argument>install</argument>
-                            </arguments>
-                            <workingDirectory>${basedir}/web</workingDirectory>
-                        </configuration>
-                    </execution>
+            <!--            <plugin>-->
+            <!--                <groupId>org.codehaus.mojo</groupId>-->
+            <!--                <artifactId>exec-maven-plugin</artifactId>-->
+            <!--                <version>3.0.0</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <id>exec-npm-install</id>-->
+            <!--                        <phase>validate</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>exec</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <executable>npm</executable>-->
+            <!--                            <arguments>-->
+            <!--                                <argument>install</argument>-->
+            <!--                            </arguments>-->
+            <!--                            <workingDirectory>${basedir}/web</workingDirectory>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
 
-                    <execution>
-                        <id>exec-npm-run-build</id>
-                        <phase>validate</phase>
-                        <goals>
-                            <goal>exec</goal>
-                        </goals>
-                        <configuration>
-                            <executable>npm</executable>
-                            <arguments>
-                                <argument>run</argument>
-                                <argument>build</argument>
-                            </arguments>
-                            <workingDirectory>${basedir}/web</workingDirectory>
-                        </configuration>
-                    </execution>
+            <!--                    <execution>-->
+            <!--                        <id>exec-npm-run-build</id>-->
+            <!--                        <phase>validate</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>exec</goal>-->
+            <!--                        </goals>-->
+            <!--                        <configuration>-->
+            <!--                            <executable>npm</executable>-->
+            <!--                            <arguments>-->
+            <!--                                <argument>run</argument>-->
+            <!--                                <argument>build</argument>-->
+            <!--                            </arguments>-->
+            <!--                            <workingDirectory>${basedir}/web</workingDirectory>-->
+            <!--                        </configuration>-->
+            <!--                    </execution>-->
 
-                </executions>
-            </plugin>
+            <!--                </executions>-->
+            <!--            </plugin>-->
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -136,12 +133,12 @@
                 <version>0.0.1-SNAPSHOT</version>
                 <executions>
                     <execution>
-                        <configuration>
-                            <webContentPath>web</webContentPath>
-                            <webFrameworkMode>Vue</webFrameworkMode>
-                        </configuration>
+                        <!--                        <configuration>-->
+                        <!--                            <webContentPath>web</webContentPath>-->
+                        <!--                            <webFrameworkMode>Vue</webFrameworkMode>-->
+                        <!--                        </configuration>-->
                         <goals>
-                            <goal>web-builder</goal>
+                            <!--                            <goal>web-builder</goal>-->
                             <goal>plugin-builder</goal>
                         </goals>
                     </execution>
@@ -151,6 +148,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.8</version>
                 <executions>
                     <execution>
                         <id>copy-dependencies</id>
