1.本地配置文件（WIP） 2.WEB配置更新（WIP）

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,4 @@ build/
 /.mvn/wrapper/
 /src/test/
 /src/main/resources/banish_local.sql
-/src/main/resources/application.yml
+/src/main/resources/META-INF/
